/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.4.2/samples
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java'
    id 'application'
    id "com.google.cloud.tools.jib" version "3.2.1"
}

dependencies {
    implementation 'io.gatling:gatling-app:3.9.0'
    implementation 'postgresql:postgresql:9.1-901-1.jdbc4'
    implementation 'com.google.code.gson:gson:2.10.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
  mainClass = 'Engine'
}

sourceSets {
    main {
         java {
            srcDirs = ['src/main/java']
         }
    }
}

var user = System.getenv("USERNAME") ?: USER
var password = System.getenv("PASSWORD") ?: PASSWORD

tasks.withType(ProcessResources) {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

jib {
    from {
        image = 'openjdk:17'
        auth {
            username = user
            password = password
        }
    }
    to {
        image = "${rootProject.name}:latest"
        auth {
            username = user
            password = password
        }
    }
    container {
        jvmFlags = ['-XX:MaxRAMPercentage=80',
                    '-XX:+UseContainerSupport',
                    "-XX:+ExitOnOutOfMemoryError",
                    "-XX:+UseG1GC",
                    "-XX:+ParallelRefProcEnabled",
                    "-XX:MaxInlineLevel=20",
                    "-XX:MaxTrivialSize=12",
                    // "-XX:-UseBiasedLocking",
                    //"-XX:+HeapDumpOnOutOfMemoryError",
                    // set Xmx as 80% of available memory (by default 25% only)
                    // workaround to redefine HOCON array in gatling.conf
                    "-Dgatling.data.writers.0=console",
                    "-Dgatling.data.writers.1=graphite"
        ]
        mainClass = 'Engine'
    }

}


